--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ textarea {
 
 .time-block {
   border-radius: 15px;
+  position: relative;
 }
 
 .row {
@@ -31,18 +32,18 @@ textarea {
 }
 
 .past {
-  background-color: #d3d3d3;
-  color: white;
+  background-color: #ff6961;
+  color: white !important;
 }
 
 .present {
-  background-color: #ff6961;
-  color: white;
+  background-color: #77dd77;
+  color: white !important;
 }
 
 .future {
-  background-color: #77dd77;
-  color: white;
+  background-color: #d3d3d3;
+  color: white !important;
 }
 
 .saveBtn {
